tests/ui/polymorphization/unsized_cast.stderr
error: item has unused generic parameters
  --> $DIR/unsized_cast.rs:11:18
   |
LL | fn foo<T: Default>() {
   |        - generic parameter `T` is unused
LL |     let _: T = Default::default();
LL |     (|| Box::new(|| {}) as Box<dyn Fn()>)();
   |                  ^^

error: item has unused generic parameters
  --> $DIR/unsized_cast.rs:11:6
   |
LL | fn foo<T: Default>() {
   |        - generic parameter `T` is unused
LL |     let _: T = Default::default();
LL |     (|| Box::new(|| {}) as Box<dyn Fn()>)();
   |      ^^

error: item has unused generic parameters
  --> $DIR/unsized_cast.rs:11:5
   |
LL | fn foo<T: Default>() {
   |        - generic parameter `T` is unused
LL |     let _: T = Default::default();
LL |     (|| Box::new(|| {}) as Box<dyn Fn()>)();
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: item has unused generic parameters
  --> $DIR/unsized_cast.rs:24:15
   |
LL | fn foo2<T: Default>() {
   |         - generic parameter `T` is unused
...
LL |         call(&|| {}, ());
   |               ^^

error: item has unused generic parameters
  --> $DIR/unsized_cast.rs:24:14
   |
LL | fn foo2<T: Default>() {
   |         - generic parameter `T` is unused
...
LL |         call(&|| {}, ());
   |              ^^^^^^

error: item has unused generic parameters
  --> $DIR/unsized_cast.rs:20:6
   |
LL | fn foo2<T: Default>() {
   |         - generic parameter `T` is unused
LL |     let _: T = Default::default();
LL |     (|| {
   |      ^^

error: item has unused generic parameters
  --> $DIR/unsized_cast.rs:20:5
   |
LL |   fn foo2<T: Default>() {
   |           - generic parameter `T` is unused
LL |       let _: T = Default::default();
LL | /     (|| {
LL | |
LL | |
LL | |         let call: extern "rust-call" fn(_, _) = Fn::call;
...  |
LL | |
LL | |     })();
   | |______^

error: aborting due to 7 previous errors

